# logicsim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  mainwindow.ui  properties.ui
.github/workflows/: ccpp.yml
cmake/: make_ui.cmake
include/sim/: basic_elements.h  bit_math.h  element.h  file_ops.h  gate.h  gate_in.h  gate_out.h  helpers.h  iserializable.h  k_tree.h  logger.h  meta_element.h  nameable.h  sim.h  utils.h
include/ui/: draw_widget.h  elem_views.h  mainwindow.h  prop_pair.h  properties.h  sim_interface.h  sim_ui_glue.h
include/ui/wrapper/: view_gate.h  view_gate_in.h  view_gate_out.h  view_nameable.h
src/: utils.cpp
src/ui/: draw_widget.cpp  mainwindow.cpp  prop_pair.cpp  properties.cpp  sim_interface.cpp
tests/: test-helpers.h
tests/full_adder/: main.cpp
tests/half_adder/: main.cpp
tests/k_tree/: main.cpp
tests/save_load/: main.cpp
tests/save_load_gui/: main.cpp
tests/unit_and/: main.cpp
